# Arcanos

./: .codex-core-direct-e2e.json  .codex-core-e2e.json  .codex-core-ping.json  .codex-core-system-state.json  .codex-tmp-latency-logs.json  .codex-tmp-live-req-logs.json  .cursorignore  .cursorrules  .dockerignore  .env  .env.example  .env.test  .env.test.example  .gitattributes  .gitignore  .gitleaksignore  .npmrc  .pr-body-ai-adapter-readiness.md  .pr-body-ai-core-fix.md  .pr-body-docs-audit.md  .pr-body-draft.md  .pr-body-gpt-sync-fix.md  .pr-body-ide-codebase-index.md  .pr-body-prompts-fix.md  .railwayignore  .uptime  AGENTS.md  AI_DISPATCHER_REFACTOR_GUIDE.md  AI_WORKER_REFACTOR_SUMMARY.md  ARCANOS.pl  ARCANOS_AUDIT_CLEANUP_FINAL_REPORT.md  ARCANOS_AUDIT_OPTIMIZATION_REPORT.yaml  ARCANOS_PYTHON_README.md  ARCANOS_V1_INTERFACE.md  ARCHITECTURE_STATE.md  AUDIT_CLEANUP_REPORT.md  AUDIT_COMPLETE.md  AUDIT_IMPLEMENTATION.md  AUDIT_LOG.md  AUTO_SYNC_COMPLETE.md  (+343 more)
daemon-python/: .env  .env.example  .env.txt  DEBUG_API.md  DEBUG_SERVER_README.md  Dockerfile.local-agent-tests  IMPLEMENTATION_SUMMARY.md  PYDANTIC_BUG_FIX.md  RATE_LIMITING_FIX.md  README.md  ai_client.py  arcanos.spec  audio.py  backend_auth_client.py  backend_client.py  build_windows.ps1  cli.py  config.py  conversation_routing.py  crash_recovery.py  credential_bootstrap.py  daemon.py  daemon_service.py  daemon_system_definition.py  debug_log.txt  debug_server.py  env_store.py  error_handler.py  gpt_client.py  ipc_client.py  memory.json  openai_key_validation.py  ptt_indicator.py  push_to_talk.py  pyproject.toml  rate_limiter.py  requirements.txt  schema.py  show_cli_status.py  start_cli.ps1  (+16 more)
daemon-python/arcanos/: __init__.py  action_plan_execution_journal.py  action_plan_execution_protocol.py  action_plan_execution_runner.py  action_plan_handler.py  action_plan_lifecycle.py  action_plan_types.py  audio.py  backend_auth_client.py  backend_client.py  backend_client_models.py  cli.py  cli_config.py  cli_content.py  (+38 more)
(+3363 files in other folders)
