[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanos"
version = "1.1.2"
description = "ARCANOS CLI daemon with voice, vision, and backend sync."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ARCANOS Team" }
]
keywords = ["ai", "cli", "assistant", "arcanos"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "openai>=1.12.0,<2",
  "packaging>=24.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "cryptography>=41.0.0",
  "tenacity>=8.2.0",
  "sentry-sdk>=1.40.0",
  "Pillow>=10.2.0",
  "pyautogui>=0.9.54",
  "opencv-python>=4.9.0",
  "SpeechRecognition>=3.10.1",
  "pyaudio>=0.2.14",
  "pyttsx3>=2.90",
  "pynput>=1.7.6",
  "webrtcvad>=2.0.10; platform_system != "Windows"",
  "pystray>=0.19.5",
  "rich>=13.7.0",
  "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
# Note: pyinstaller removed - Windows executable builds deprecated
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "black>=23.12.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0"
]

[project.scripts]
arcanos = "arcanos.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["arcanos*"]

[tool.setuptools.package-data]
arcanos = ["memory/*.json", "assets/*"]

